[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-py-lib"
version = "0.0.3"
authors = [
  { name="Marc", email="support@marcuslion.com" },
]
description = "Marcus Lion Platform library package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Marcus-Lion/ml-samples.git"
"Bug Tracker" = "https://github.com/Marcus-Lion/ml-samples.git/issues"
