[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marcuslion"
version = "0.1.3"
authors = [
  { name="Marc", email="support@marcuslion.com" },
]
description = "Marcus Lion Python library package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Marcus-Lion/ml-samples.git"
"Bug Tracker" = "https://github.com/Marcus-Lion/ml-samples.git/issues"


